@@ -247,6 +247,31 @@ auto_flac (OGGZ * oggz, ogg_packet * op, long serialno, void * user_data)
   return 1;
 }
 
+static int
+auto_cmml (OGGZ * oggz, ogg_packet * op, long serialno, void * user_data)
+{
+  unsigned char * header = op->packet;
+  ogg_int64_t granule_rate_numerator = 0, granule_rate_denominator = 0;
+
+  if (op->bytes < 28) return 0;
+
+  if (strncmp ((char *)header, "CMML", 4)) return 0;
+  if (!op->b_o_s) return 0;
+
+  granule_rate_numerator = INT64_LE_AT(&header[12]);
+  granule_rate_denominator = INT64_LE_AT(&header[20]);
+#ifdef DEBUG
+  printf ("Got CMML rate %lld/%lld\n", granule_rate_numerator,
+	  granule_rate_denominator);
+#endif
+
+  oggz_set_metric_linear (oggz, serialno,
+			  granule_rate_numerator,
+			  OGGZ_AUTO_MULT * granule_rate_denominator);
+
+  return 1;
+}
+
 static const OggzReadPacket auto_readers[] = {
   auto_speex,
   auto_vorbis,
@@ -254,6 +279,7 @@ static const OggzReadPacket auto_readers[] = {
   auto_annodex,
   auto_anxdata,
   auto_flac,
+  auto_cmml,
   NULL
 };
 
